# rt_super_z

./: .gitignore  LICENSE  readme.md  west.yml
boards/arm/rt_super/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  board.h  flash_config.c  init.c  pinmux.c  rt_super.dts  rt_super.yaml  rt_super_defconfig
boards/arm/rt_super__mk76/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  init.c  rt_super__mk76-pinctrl.dtsi  rt_super__mk76.dts  rt_super__mk76.yaml  rt_super__mk76_defconfig
bringup/: .gitignore  README.md
bringup/Common/Assets/: GenSprites.bat
bringup/Common/eGFX/SRC/: eGFX.h
bringup/Common/eGFX_Config/: eGFX_Config.h  eGFX_Driver_ST7789_240_240_BD.h  eGFX_InputDriver_MM.c  eGFX_InputDriver_MM.h
bringup/mimxrt685audevk_monkey_pdm/: .cproject  .default_mex  .project  mimxrt685audevk_monkey_pdm.mex  rt685.jdebug  script.jlink
bringup/mimxrt685audevk_monkey_pdm/board/: clock_config.c  pin_mux.c  pin_mux.h
bringup/mimxrt685audevk_monkey_pdm/doc/: readme.md
bringup/mimxrt685audevk_monkey_pdm/flash_config/: flash_config.c
bringup/rt_super_b/SuperMonkeyGFX/source/egfx/src/: CMakeLists.txt
bringup/rt_super_b/SuperMonkeyGFX/source/egfx/src/Core/: eGFX_Animator.h  eGFX_PixelOps.h  eGFX_Plane.h  eGFX_StringOps.c  eGFX_StringOps.h
bringup/rt_super_b/SuperMonkeyGFX/source/egfx/src/Core/Fonts/: rebuild_core_fonts.bat
bringup/rt_super_b/SuperMonkeyGFX/source/egfx/src/Core/Fonts/FONT_10_14_1BPP/: FontConfiguration.jsx
bringup/rt_super_b/SuperMonkeyGFX/source/egfx/src/Core/Utilities/: eGFX_BMP.c
bringup/rt_super_b/SuperMonkeyGFX/source/egfx/src/UI/: eGFX_Activity.h  eGFX_InputTypes.h
hello_world/: CMakeLists.txt  OZONE.jdebug  README.rst  prj.conf  sample.yaml  zephyr.ps1
hello_world/boards/arm/rt_super/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  board.h  clock_config.h  flash_config.c  flash_config.h  pinmux.c  pre_dt_board.cmake  rt_super.dts  rt_super.yaml  rt_super_defconfig
hello_world/boards/arm/rt_super/doc/: index.rst
hello_world/src/: main.c
shell/: CMakeLists.txt  prj.conf
spi_flash/: CMakeLists.txt  OZONE.jdebug  prj.conf
spi_flash/src/: main.c
(+171 files in other folders)
